# hChat

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  example.config.toml  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.firecrawl/: search-forge-apps.json  search-github-chat-apps.json  search-hchat-specific.json  search-llm-chat-apps.json  search-llm-desktop-apps.json  search-llm-guis.json  search-npm-hchat.json  search-npm-spark.json  search-spark-apps.json  similar-apps-summary.md
.github/workflows/: release.yml
04/49b43aeef1/: metadata.json
05/a26998266b/: metadata.json
07/9553f2b985/: metadata.json
09/8762d12929/: metadata.json
09/fca0161c0b/: metadata.json
0b/46e95e6aef/: metadata.json
0b/dcac657f67/: metadata.json
0c/acf60903fd/: metadata.json
10/178986437e/: metadata.json
15/048348f242/: metadata.json
16/04d0e7d616/: metadata.json
1a/04b1a5dcb2/: metadata.json
1b/15cd7dd28f/: metadata.json
1d/4c9779903f/: metadata.json
1e/cc97a0675b/: metadata.json
22/ae2fb870d7/: metadata.json
24/8b56deedb7/: metadata.json
25/badb8b086e/: metadata.json
26/c47b840d97/: metadata.json
26/fd6a850de6/: metadata.json
27/816b571956/: metadata.json
29/09ebbd7e42/: metadata.json
29/2fccbec863/: metadata.json
2f/61edc77f0a/: metadata.json
31/910962e6a3/: metadata.json
31/e9df8ad3f9/: metadata.json
33/fbfa77e7c2/: metadata.json
37/815d780366/: metadata.json
37/edf3666263/: metadata.json
39/4bf5a464b3/: metadata.json
3c/e248899c12/: metadata.json
40/0dd3f2ab33/: metadata.json
40/f661f368f2/: metadata.json
41/c4aef080cb/: metadata.json
42/8f807dc480/: metadata.json
47/e72fd1a1a4/: metadata.json
49/98fa3498c1/: metadata.json
4a/c78d6e4e33/: metadata.json
4b/3ebf6058be/: metadata.json
4c/09995a1ebc/: metadata.json
4e/2a11a0329c/: metadata.json
4e/50b71050f7/: metadata.json
4e/981ea8a75f/: metadata.json
4f/3e1dfb1a64/: metadata.json
4f/a327095ad2/: metadata.json
51/9235204db2/: metadata.json
52/d0b1e7c0f0/: metadata.json
56/b47a9d64aa/: metadata.json
5c/cc111a3a2a/: metadata.json
5f/99ac8491aa/: metadata.json
61/0c90c17631/: metadata.json
67/1902eedd5f/: metadata.json
6d/84182a5220/: metadata.json
6e/27e1714715/: metadata.json
6e/457d831120/: metadata.json
71/5f9bd22be6/: metadata.json
79/16012bfc4f/: metadata.json
7a/4fda1f070c/: metadata.json
84/1361f09db9/: metadata.json
84/647a794202/: metadata.json
84/a3aa5118fc/: metadata.json
89/0e63af482d/: metadata.json
92/c25c5cdcaa/: metadata.json
93/be7f36e4d5/: metadata.json
99/52dadc9a15/: metadata.json
9b/f838f69e2a/: metadata.json
9f/536d3e376a/: metadata.json
a0/0dea2ee837/: metadata.json
a3/7656c3b4c9/: metadata.json
a4/77b144586d/: metadata.json
a8/29cb84954b/: metadata.json
agent/: Cargo.toml
agent/src/: main.rs
b1/cfe4c7fbbd/: metadata.json
bc/1f3a3ebef6/: metadata.json
bf/32e7809b8c/: metadata.json
c1/d5c5358a62/: metadata.json
cb/70facaed70/: metadata.json
cc/f8d839c3d7/: metadata.json
ce/dbfeb9ff42/: metadata.json
d0/6d6657e34e/: metadata.json
d4/6a15ffebf3/: metadata.json
da/b51761617b/: metadata.json
docs/: MCP_PLAN.md
src/: App.tsx  api.rs  app.rs  config.rs  main.rs  main.tsx  markdown.rs  message.rs  model_limits.rs  storage.rs  styles.css  types.ts
src-tauri/: Cargo.toml  example.config.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/core/: agents.rs  api.rs  config.rs  slash.rs  storage.rs  tools.rs
src-tauri/src/core/default_tools/: run_shell.toml
src-tauri/src/mcp/: mod.rs
src-tauri/src/metrics/: gpu.rs  mod.rs  prometheus.rs
src/lib/: slash.ts  (+6 more)
(+384 files in other folders)
