[package]
name = "hchat"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
futures-util = "0.3"

[profile.release]
opt-level = "s"
lto = true
strip = true
