[package]
name = "hchat"
version = "0.1.0"
edition = "2024"
description = "Lightweight desktop chat client for local LLMs"
license = "MIT"
repository = "https://github.com/heath0xFF/hChat"

[dependencies]
eframe = "0.31"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
futures-util = "0.3"

[package.metadata.deb]
maintainer = "Heath"
section = "net"
depends = "$auto"
assets = [
    ["target/release/hchat", "usr/bin/", "755"],
]

[package.metadata.bundle]
name = "hChat"
identifier = "com.heath.hchat"
category = "Utility"

[profile.release]
opt-level = "s"
lto = true
strip = true
