[package]
name = "hchat"
version = "0.3.2"
edition = "2024"
rust-version = "1.85"
description = "Lightweight desktop chat client for local LLMs"
license = "MIT"
repository = "https://github.com/heath0xFF/hChat"

[dependencies]
eframe = "0.34"
egui_commonmark = "0.23"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-util = "0.7"
futures-util = "0.3"
arboard = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "6"
toml = "0.8"
font-kit = "0.14.3"

[package.metadata.deb]
maintainer = "Heath"
section = "net"
depends = "$auto"
assets = [
    ["target/release/hchat", "usr/bin/", "755"],
]

[package.metadata.bundle]
name = "hChat"
identifier = "com.heath.hchat"
category = "Utility"

[profile.release]
strip = true

[profile.dist]
inherits = "release"
opt-level = "s"
lto = true
