[package]
name = "hchat"
version = "0.10.0"
edition = "2024"
rust-version = "1.85"
description = "Local LLM workstation — chat, live inference metrics, and artifact rendering"
license = "MIT"
repository = "https://github.com/heath0xFF/hChat"

[lib]
name = "hchat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hchat"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "time"] }
tokio-util = "0.7"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "6"
toml = "0.8"
regex = "1"
base64 = "0.22"
rmcp = { version = "1.7.0", features = ["client", "transport-child-process"] }

[profile.release]
strip = true

[profile.dist]
inherits = "release"
opt-level = "s"
lto = true

[target.'cfg(target_os = "macos")'.dependencies]
macmon = "0.7.0"
